third_party/move/move-compiler-v2/tests/reference-safety/debug_12301.exp

Diagnostics:
error: cannot write local `a` since other mutable usages for this reference exist
  ┌─ tests/reference-safety/debug_12301.move:6:9
  │
6 │         *a = 0;
  │         ^^^^^^ written here
7 │         *c
  │         -- used here

error: cannot write local `a` since other mutable usages for this reference exist
   ┌─ tests/reference-safety/debug_12301.move:15:9
   │
15 │         *a = 0;
   │         ^^^^^^ written here
16 │         *k = 1;
17 │         *c
   │         -- used here
